Fix wrong margin and padding

--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -49,7 +49,24 @@ p {
 }
 
 .Tracklists {
-  display: flex;
+  display: grid;
   width: 100%;
-  gap: 5%;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-auto-flow: column;
+  gap: 7%;
+}
+
+.EachTracklist {
+  width: 100%;
+}
+
+@media only screen and (max-width: 850px) {
+  .Tracklists {
+    display: block;
+    width: 100%;
+  }
+
+  .EachTracklist {
+    margin-bottom: 3rem;
+  }
 }
