--- a/src/components/SearchResults/SearchResults.module.css
+++ b/src/components/SearchResults/SearchResults.module.css
@@ -2,10 +2,14 @@
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    width: 50%;
+    width: 100%;
     align-items: center;
     justify-items: center;
     padding: 0 1%;
+}
+
+.Tracklist {
+    width: 100%;
 }
 
 .Title {
